--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,41 +114,19 @@ jobs:
             exit 1
           fi
 
-        ## TODO: Replace with `yarn fix:yarn-dedupe` after upgrading to Yarn v3+
-        ## https://yarnpkg.com/cli/dedupe
-        ## https://github.com/yarnpkg/berry/issues/2297
-      - name: Run yarn lint:yarn-deduplicate
+      - name: Run yarn lint:yarn-dedupe
         if: ${{ success() || failure() }}
         run: |
-          if ! yarn lint:yarn-deduplicate; then
+          if ! yarn lint:yarn-dedupe; then
             echo ''
             echo ''
             echo 'ℹ️ ℹ️ ℹ️'
             echo 'Some dependencies can be deduplicated, which will make node_modules'
             echo 'lighter and potentially save us from unexplainable bugs.'
-            echo 'Please run `yarn fix:yarn-deduplicate` locally and commit yarn.lock.'
+            echo 'Please run `yarn fix:yarn-dedupe` locally and commit yarn.lock.'
             echo 'You may need to run the command 2-3 times in some rare cases.'
             echo 'ℹ️ ℹ️ ℹ️'
             exit 1
-          fi
-
-        ## yarn --frozen-lockfile does not work for monorepos, so using a workaround:
-        ## https://github.com/yarnpkg/yarn/issues/5840#issuecomment-467516207
-        ## TODO: Use `yarn install --immutable` after upgrading to Yarn v3+
-      - name: Check yarn.lock stability
-        if: ${{ success() || failure() }}
-        run: |
-          git diff yarn.lock
-          if ! git diff --exit-code yarn.lock; then
-            echo ''
-            echo ''
-            echo 'ℹ️ ℹ️ ℹ️'
-            echo 'Changes were detected in yarn.lock file after running `yarn install`.'
-            echo 'This makes runtime less stable, so should be avoided.'
-            echo 'Please run `yarn install` locally and commit yarn.lock.'
-            echo 'You may also want to run `yarn fix:yarn-deduplicate` just in case.'
-            echo 'ℹ️ ℹ️ ℹ️'
-            exit 1;
           fi
 
   packages:
