--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,13 @@ yarn-debug.log*
 yarn-error.log*
 
 ## Dependency directories
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 node_modules
 
 ## TypeScript cache
@@ -16,9 +23,6 @@ node_modules
 
 ## Optional eslint cache
 .eslintcache
-
-## Yarn Integrity file
-.yarn-integrity
 
 ## macOS directory file
 .DS_Store
