--- a/.prettierignore
+++ b/.prettierignore
@@ -31,6 +31,13 @@ yarn-debug.log*
 yarn-error.log*
 
 ## Dependency directories
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 node_modules
 
 ## TypeScript cache
@@ -38,9 +45,6 @@ node_modules
 
 ## Optional eslint cache
 .eslintcache
-
-## Yarn Integrity file
-.yarn-integrity
 
 ## macOS directory file
 .DS_Store
@@ -88,3 +92,9 @@ apps/site/site-map.json
 apps/site/test-results
 packages/block-template-html/dev/src
 packages/mock-block-dock/src/version.ts
+
+#########################
+## Shared between linters
+#########################
+.git/
+.yarn/
