--- a/packages/mock-block-dock/package.json
+++ b/packages/mock-block-dock/package.json
@@ -43,8 +43,8 @@
     "@emotion/styled": "^11.10.0",
     "@lit-labs/react": "^1.0.4",
     "@mui/material": "^5.10.4",
-    "ajv": "^8.9.0",
-    "echarts": "^5.3.3",
+    "ajv": "patch:ajv@npm%3A8.9.0#~/.yarn/patches/ajv-npm-8.9.0-d7480193a9.patch",
+    "echarts": "patch:echarts@npm%3A5.3.3#~/.yarn/patches/echarts-npm-5.3.3-e3b4e49969.patch",
     "react-json-view": "^1.21.3",
     "react-resizable": "^3.0.4",
     "styled-jsx": "5.0.7",
