--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dev": "yarn workspace @apps/site dev",
     "dev:seed-db": "yarn workspace @apps/site dev:seed-db",
     "dev:db": "yarn workspace @apps/site dev:db",
-    "prepare": "turbo run codegen && turbo run build \"--filter=!./apps/*\""
+    "postinstall": "husky install && turbo run codegen && turbo run build \"--filter=!./apps/*\""
   },
   "lint-staged": {
     "**": [
