--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -141,6 +141,7 @@
     "playwright-test-coverage": "^1.2.0",
     "rimraf": "^3.0.2",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "typescript-json-schema": "^0.53.0"
   }
 }
