--- a/packages/block-template-html/package.json
+++ b/packages/block-template-html/package.json
@@ -24,6 +24,7 @@
     "format": "prettier --write --ignore-unknown .",
     "lint:eslint": "eslint .",
     "prepare": "rimraf ./dev/src && lnk -f ./src ./dev",
+    "prepublishOnly": "PACKAGE_DIR=$(pwd) yarn workspace @local/package-chores exe scripts/cleanup-before-publishing.ts",
     "serve": "block-scripts serve"
   },
   "prettier": {
