--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -36,7 +36,8 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
     "@next/bundle-analyzer": "^12.3.1",
-    "@sentry/nextjs": "^7.13.0",
+    "@sentry/nextjs": "7.15.0",
+    "@sentry/replay": "0.6.4-0",
     "@twind/next": "^1.0.9",
     "ajv": "^8.9.0",
     "algoliasearch": "4.12.1",
