--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -35,7 +35,7 @@
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
-    "@next/bundle-analyzer": "12.3.2-canary.31",
+    "@next/bundle-analyzer": "^12.3.1",
     "@sentry/nextjs": "7.15.0",
     "@sentry/replay": "0.6.4-0",
     "@twind/next": "^1.0.9",
@@ -67,7 +67,7 @@
     "mime-types": "^2.1.35",
     "mock-block-dock": "0.0.33",
     "mongodb": "^4.2.2",
-    "next": "12.3.2-canary.31",
+    "next": "^12.3.1",
     "next-connect": "^0.12.1",
     "next-mdx-remote": "^4.0.3",
     "next-seo": "^5.5.0",
