Implement text hook service in mock-block-dock (#656)
* add new error code 'INVALID_INPUT' to hook message

* implement hook service 'text' handler in mock block dock

* add NOT_FOUND error for hook

* delete error code changeset (handled in #676)

* Update packages/mock-block-dock/src/util.ts

Co-authored-by: Nate Higgins <nate@nateh.uk>

* move slate node resetting into effect

* Update packages/mock-block-dock/src/hook-portals/text.tsx

Co-authored-by: Nate Higgins <nate@nateh.uk>

* Update packages/mock-block-dock/src/hook-portals/text.tsx

Co-authored-by: Nate Higgins <nate@nateh.uk>

* prettier

Co-authored-by: Nate Higgins <nate@nateh.uk>

--- a/packages/mock-block-dock/package.json
+++ b/packages/mock-block-dock/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@blockprotocol/core": "0.0.12",
     "@blockprotocol/graph": "0.0.18",
+    "@blockprotocol/hook": "0.0.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@lit-labs/react": "^1.0.4",
@@ -47,6 +48,8 @@
     "echarts": "^5.3.3",
     "react-json-view": "^1.21.3",
     "react-resizable": "^3.0.4",
+    "slate": "^0.82.1",
+    "slate-react": "^0.83.1",
     "styled-jsx": "5.0.7",
     "use-local-storage-state": "^18.1.1",
     "uuid": "^8.3.2"
