Add 'Hook Service' spec and FAQ alongside small fixes in hook package (#676)
* hook package: update for spec changes. export json. bug fix in useHook

* add hook service spec + faq to site

* fixes

* fix file extension

* typo

* Remove 'Hook Service' as upcoming from roadmap

* dep consistency

Co-authored-by: David Wilkinson <6226576+nonparibus@users.noreply.github.com>

--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-ses": "3.169.0",
     "@blockprotocol/core": "0.0.12",
     "@blockprotocol/graph": "0.0.18",
+    "@blockprotocol/hook": "0.0.6",
     "@emotion/cache": "^11.10.0",
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
