Nohoist `@types/css-font-loading-module`

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "packages/@local/*"
     ],
     "nohoist": [
+      "**/@types/css-font-loading-module",
       "**/@types/prismjs"
     ]
   },
