--- a/packages/@local/eslint-config/package.json
+++ b/packages/@local/eslint-config/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.26.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "3.5.2",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "27.1.3",
     "eslint-plugin-jsx-a11y": "6.6.1",
