--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -26,7 +26,7 @@
         "^envalid$",
         "^execa$",
         "^lit$",
-        "^webpack-cli$"
+        "^webpack-cli$",
         "^webpack-dev-server$"
       ]
     },
