Update babel pattern

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -34,7 +34,7 @@
       "enabled": true,
       "groupName": "Babel",
       "matchManagers": ["npm"],
-      "matchPackagePatterns": ["babel"]
+      "matchPackagePatterns": ["^@babel/", "^babel-", "^babel$"]
     },
     {
       "enabled": true,
