--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -11,7 +11,7 @@
     "dev": "yarn exe scripts/dev.ts",
     "dev:db": "docker-compose -f docker-compose.dev.yml --env-file .env.local up",
     "dev:seed-db": "yarn exe scripts/seed-db.ts",
-    "exe": "node --unhandled-rejections=strict --experimental-loader ts-node/esm/transpile-only --es-module-specifier-resolution=node --require=@local/script-resources/suppress-experimental-warnings.cjs --require dotenv-flow/config",
+    "exe": "node --unhandled-rejections=strict --experimental-loader ts-node/esm/transpile-only --require=@local/script-resources/suppress-experimental-warnings.cjs --require dotenv-flow/config",
     "fix:eslint": "eslint --fix .",
     "generate-blockmetadata-schema": "typescript-json-schema ../../packages/@blockprotocol/core/dist/esm/types.d.ts BlockMetadata --required true --out public/schemas/block-metadata.json",
     "lint:eslint": "eslint .",
