Widen scope of Renovate (#711)

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,21 +7,46 @@
   "schedule": ["every weekday before 5am"],
   "packageRules": [
     {
-      "enabled": false,
       "matchManagers": ["npm"],
       "rangeStrategy": "bump",
       "stabilityDays": 3
     },
     {
+      "enabled": false,
+      "matchDepTypes": ["dependencies", "peerDependencies"],
+      "matchManagers": ["npm"]
+    },
+    {
       "enabled": true,
       "matchManagers": ["npm"],
-      "matchFiles": ["package.json"]
+      "matchPackagePatterns": [
+        "^axios$",
+        "^chalk$",
+        "^core-js$",
+        "^envalid$",
+        "^execa$",
+        "^lit$",
+        "^webpack-cli$",
+        "^webpack-dev-server$"
+      ]
+    },
+    {
+      "enabled": true,
+      "groupName": "Babel",
+      "matchManagers": ["npm"],
+      "matchPackagePatterns": ["^@babel/", "^babel-", "^babel$"]
     },
     {
       "enabled": true,
       "groupName": "Changesets",
       "matchManagers": ["npm"],
       "matchPackagePatterns": ["^@changesets/"]
+    },
+    {
+      "enabled": true,
+      "groupName": "Jest",
+      "matchManagers": ["npm"],
+      "matchPackagePatterns": ["^@types/jest$", "^jest", "^ts-jest$"]
     },
     {
       "automerge": true,
