--- a/packages/@blockprotocol/type-system-web/package.json
+++ b/packages/@blockprotocol/type-system-web/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
+    "eslint": "8.26.0",
     "typescript": "4.8.4"
   },
   "collaborators": [
