Reduce timeout if workflows using `actions/upload-artifact@v3`

--- a/.github/workflows/site-deployment.yml
+++ b/.github/workflows/site-deployment.yml
@@ -15,6 +15,7 @@ jobs:
     name: Warm up Vercel
     if: github.event.deployment_status.state == 'success' || github.event_name == 'schedule'
     runs-on: ubuntu-20.04
+
     steps:
       - name: Fetch URLs that use AWS Lambda
         run: |
@@ -37,6 +38,8 @@ jobs:
     needs: [warm_up_vercel]
     if: github.event.deployment_status.state == 'success' || github.event.schedule == '0 4 * * *'
     runs-on: ubuntu-20.04
+    timeout-minutes: 30 ## https://github.com/actions/upload-artifact/issues/358
+
     steps:
       - uses: actions/checkout@v3
 
