--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
     name: Linting
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-20.04
+
     steps:
       - uses: actions/checkout@v3
         with:
@@ -155,6 +156,7 @@ jobs:
     name: NPM Packages
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-20.04
+    timeout-minutes: 30 ## https://github.com/actions/upload-artifact/issues/358
 
     steps:
       - uses: actions/checkout@v3
@@ -240,6 +242,8 @@ jobs:
           - iphone
           - pixel
           - safari
+    timeout-minutes: 30 ## https://github.com/actions/upload-artifact/issues/358
+
     steps:
       - uses: actions/checkout@v3
 
