--- a/packages/@local/package-chores/package.json
+++ b/packages/@local/package-chores/package.json
@@ -12,7 +12,7 @@
     "@local/tsconfig": "0.0.0-private",
     "@types/fs-extra": "^9.0.13",
     "@types/wait-on": "5.3.1",
-    "axios": "^1.1.3",
+    "axios": "1.1.3",
     "chalk": "5.1.2",
     "envalid": "7.3.1",
     "execa": "^6.1.0",
