--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -42,7 +42,7 @@
     "@twind/next": "^1.0.9",
     "ajv": "^8.9.0",
     "algoliasearch": "4.12.1",
-    "axios": "1.1.3",
+    "axios": "1.2.0-alpha.1",
     "axios-retry": "3.3.1",
     "busboy": "^1.4.0",
     "clsx": "^1.1.1",
