--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -36,7 +36,7 @@
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
-    "@next/bundle-analyzer": "^12.3.1",
+    "@next/bundle-analyzer": "13.0.3",
     "@sentry/nextjs": "7.16.0",
     "@sentry/replay": "0.6.8",
     "@twind/next": "^1.0.9",
@@ -69,7 +69,7 @@
     "mime-types": "^2.1.35",
     "mock-block-dock": "0.0.38",
     "mongodb": "^4.2.2",
-    "next": "^12.3.1",
+    "next": "13.0.3",
     "next-connect": "^0.12.1",
     "next-mdx-remote": "^4.0.3",
     "next-seo": "^5.5.0",
