--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -2,6 +2,7 @@ name: Semgrep
 on:
   # Scan changed files in PRs (diff-aware scanning):
   pull_request: {}
+  # Scan mainline branches and report all findings:
   push:
     branches:
       - main
