--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - main
+  # Schedule the CI job (this method uses cron syntax):
   schedule:
     - cron: '0 0 * * 0'
 jobs:
