--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -8,7 +8,7 @@ on:
       - main
   # Schedule the CI job (this method uses cron syntax):
   schedule:
-    - cron: '0 0 * * 0'
+    - cron: '30 0 1,15 * *' # scheduled for 00:30 UTC on both the 1st and 15th of the month
 jobs:
   semgrep:
     name: Scan
