--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -108,7 +108,7 @@
     "@babel/runtime": "^7.20.1",
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
-    "@playwright/test": "1.28.0-alpha-nov-10-2022",
+    "@playwright/test": "1.28.0",
     "@types/busboy": "^1.5.0",
     "@types/cookie-signature": "^1.0.4",
     "@types/cors": "^2.8.12",
@@ -140,7 +140,7 @@
     "eslint": "8.27.0",
     "micromatch": "^4.0.5",
     "nyc": "^15.1.0",
-    "playwright": "1.28.0-alpha-nov-10-2022",
+    "playwright": "1.28.0",
     "playwright-test-coverage": "^1.2.5",
     "rimraf": "^3.0.2",
     "ts-node": "10.9.1",
