--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,7 +4,7 @@
   "prConcurrentLimit": 10,
   "enabledManagers": ["github-actions", "npm"],
   "rebaseWhen": "conflicted",
-  "schedule": ["every weekday before 5am"],
+  "schedule": ["monday before 5am", "thursday before 5am"],
   "packageRules": [
     {
       "matchManagers": ["npm"],
@@ -26,6 +26,7 @@
         "^envalid$",
         "^execa$",
         "^lit$",
+        "^webpack$",
         "^webpack-cli$",
         "^webpack-dev-server$"
       ]
