--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -311,6 +311,10 @@ jobs:
         ## https://github.com/tiaanduplessis/kill-port/issues/48
         # run: yarn kill-port 3000
 
+      - name: Stop DB
+        if: ${{ success() || failure() }}
+        run: docker-compose -f apps/site/docker-compose.dev.yml down
+
       - name: Generate coverage report
         if: ${{ success() || failure() }}
         run: yarn nyc report --reporter=lcovonly --reporter=text
@@ -323,10 +327,6 @@ jobs:
           files: coverage/lcov.info
           flags: site-integration-${{ matrix.device }}
           token: ${{ secrets.CODECOV_TOKEN }} ## not required for public repos, can be removed when https://github.com/codecov/codecov-action/issues/837 is resolved
-
-      - name: Stop DB
-        if: ${{ success() || failure() }}
-        run: docker-compose -f docker-compose.dev.yml down
 
       - name: Show DB logs
         if: ${{ success() || failure() }}
