--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -77,6 +77,7 @@
     "node-fetch": "^3.2.10",
     "nodemailer": "^6.7.2",
     "notistack": "^2.0.5",
+    "nprogress": "^0.2.0",
     "oembed-providers": "^1.0.20220105",
     "passport": "^0.5.2",
     "prismjs": "^1.27.0",
@@ -122,6 +123,7 @@
     "@types/micromatch": "^4.0.2",
     "@types/mime-types": "^2.1.1",
     "@types/nodemailer": "^6.4.6",
+    "@types/nprogress": "^0.2.0",
     "@types/passport": "^1.0.11",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.25",
