--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,9 +2,9 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "automerge": true,
   "dependencyDashboard": true,
+  "dependencyDashboardApproval": true,
   "enabledManagers": ["github-actions", "npm"],
   "postUpdateOptions": ["yarnDedupeFewer"],
-  "prConcurrentLimit": 0,
   "rebaseWhen": "conflicted",
   "packageRules": [
     {
