--- a/packages/@local/package-chores/package.json
+++ b/packages/@local/package-chores/package.json
@@ -5,9 +5,12 @@
   "type": "module",
   "scripts": {
     "exe": "node --unhandled-rejections=strict --experimental-loader ts-node/esm/transpile-only --es-module-specifier-resolution=node --require=@local/script-resources/suppress-experimental-warnings.cjs --require dotenv-flow/config",
+    "fix:eslint": "eslint --fix .",
+    "lint:eslint": "eslint .",
     "lint:tsc": "tsc --noEmit"
   },
   "devDependencies": {
+    "@local/eslint-config": "0.0.0-private",
     "@local/script-resources": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
     "@types/fs-extra": "^9.0.13",
@@ -15,6 +18,7 @@
     "axios": "1.2.0-alpha.1",
     "chalk": "5.1.2",
     "envalid": "7.3.1",
+    "eslint": "8.28.0",
     "execa": "^6.1.0",
     "fs-extra": "^10.1.0",
     "prettier": "2.8.0",
