--- a/packages/@local/script-resources/package.json
+++ b/packages/@local/script-resources/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "fix:eslint": "eslint --fix .",
+    "lint:eslint": "eslint .",
     "lint:tsc": "tsc --noEmit"
   },
   "devDependencies": {
+    "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
+    "eslint": "8.28.0",
     "typescript": "4.8.4"
   }
 }
