Cover Sentry with Renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -72,6 +72,12 @@
       "groupName": "Prettier",
       "matchManagers": ["npm"],
       "matchPackagePatterns": ["^prettier"]
+    },
+    {
+      "enabled": true,
+      "groupName": "Sentry",
+      "matchManagers": ["npm"],
+      "matchPackagePatterns": ["^@sentry/"]
     }
   ]
 }
