--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,55 +1,14 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["config:base"],
+
   "automerge": true,
   "dependencyDashboard": true,
   "dependencyDashboardApproval": true,
-  "enabledManagers": ["github-actions", "npm"],
   "postUpdateOptions": ["yarnDedupeFewer"],
+  "rangeStrategy": "bump",
   "rebaseWhen": "conflicted",
   "packageRules": [
-    {
-      "matchManagers": ["npm"],
-      "rangeStrategy": "bump"
-    },
-    {
-      "enabled": false,
-      "matchDepTypes": ["dependencies", "peerDependencies"],
-      "matchManagers": ["npm"]
-    },
-    {
-      "enabled": true,
-      "matchManagers": ["npm"],
-      "matchPackagePatterns": [
-        "^axios$",
-        "^chalk$",
-        "^core-js$",
-        "^envalid$",
-        "^execa$",
-        "^lit$",
-        "^typescript$",
-        "^webpack$",
-        "^webpack-cli$",
-        "^webpack-dev-server$"
-      ]
-    },
-    {
-      "enabled": true,
-      "groupName": "Babel",
-      "matchManagers": ["npm"],
-      "matchPackagePatterns": ["^@babel/", "^babel-", "^babel$"]
-    },
-    {
-      "enabled": true,
-      "groupName": "Changesets",
-      "matchManagers": ["npm"],
-      "matchPackagePatterns": ["^@changesets/"]
-    },
-    {
-      "enabled": true,
-      "groupName": "Jest",
-      "matchManagers": ["npm"],
-      "matchPackagePatterns": ["^@types/jest$", "^jest", "^ts-jest$"]
-    },
     {
       "enabled": true,
       "groupName": "ESLint",
@@ -57,22 +16,27 @@
       "matchPackagePatterns": [
         "^@types/eslint",
         "^@typescript-eslint/",
-        "^eslint-config-",
-        "^eslint-plugin-",
+        "^eslint-",
         "^eslint$"
       ]
     },
     {
       "enabled": true,
-      "groupName": "Playwright",
+      "groupName": "Jest",
       "matchManagers": ["npm"],
-      "matchPackagePatterns": ["^@playwright/", "^playwright"]
+      "matchPackagePatterns": ["^@types/jest$", "^jest", "^ts-jest$", "^jest-"]
     },
     {
       "enabled": true,
-      "groupName": "Prettier",
+      "groupName": "Playwright",
       "matchManagers": ["npm"],
-      "matchPackagePatterns": ["^prettier"]
+      "matchPackagePatterns": ["^@playwright/", "^playwright$", "^playwright-"]
+    },
+    {
+      "enabled": true,
+      "groupName": "Jest",
+      "matchManagers": ["npm"],
+      "matchPackagePatterns": ["^@types/jest$", "^jest", "^ts-jest$"]
     },
     {
       "enabled": true,
