--- a/packages/@blockprotocol/type-system/package.json
+++ b/packages/@blockprotocol/type-system/package.json
@@ -41,19 +41,24 @@
     "build:bundle": "rollup -c --bundleConfigAsCjs",
     "build:wasm": "(cd ../../../crates/type-system && cargo make build)",
     "compressed-size": "yarn build && find dist -iname '*.js' -exec npx terser@latest --compress --mangle --output {} -- {} \\;",
+    "test": "jest",
     "fix:eslint": "eslint --fix .",
     "lint:eslint": "eslint .",
     "lint:tsc": "tsc --noEmit",
     "optimize": "wasm-opt -Os src/wasm/type-system_bg.wasm -o tmp.wasm && mv tmp.wasm src/wasm/type-system_bg.wasm",
+    "prepublishOnly": "yarn build:wasm && yarn test && yarn optimize && yarn build:bundle"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
     "@rollup/plugin-typescript": "^9.0.1",
     "@rollup/plugin-wasm": "^6.0.0",
+    "@types/jest": "29.2.3",
     "@types/node": "^18.8.4",
     "eslint": "8.28.0",
+    "jest": "29.3.1",
     "rollup": "^3.1.0",
+    "ts-jest": "29.0.3",
     "tslib": "^2.4.0",
     "typescript": "^4.9.3"
   },
