--- a/packages/@blockprotocol/type-system/package.json
+++ b/packages/@blockprotocol/type-system/package.json
@@ -51,16 +51,16 @@
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
-    "@rollup/plugin-typescript": "^9.0.1",
-    "@rollup/plugin-wasm": "^6.0.0",
+    "@rollup/plugin-typescript": "9.0.2",
+    "@rollup/plugin-wasm": "6.0.1",
     "@types/jest": "29.2.3",
-    "@types/node": "^18.8.4",
+    "@types/node": "18.11.10",
     "eslint": "8.28.0",
     "jest": "29.3.1",
-    "rollup": "^3.1.0",
+    "rollup": "3.5.1",
     "ts-jest": "29.0.3",
-    "tslib": "^2.4.0",
-    "typescript": "^4.9.3"
+    "tslib": "2.4.1",
+    "typescript": "4.9.3"
   },
   "collaborators": [
     "HASH"
