--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@ apps/site/test-results
 packages/block-template-html/dev/src
 packages/mock-block-dock/src/version.ts
 packages/@blockprotocol/type-system/.rollup.cache
+packages/@blockprotocol/type-system/src/wasm
+
+##################
+## Specific to git
+##################
