--- a/packages/@blockprotocol/type-system/package.json
+++ b/packages/@blockprotocol/type-system/package.json
@@ -21,6 +21,12 @@
       "import": "./dist/es/index.js",
       "default": "./dist/cjs/index.cjs"
     },
+    "./slim": {
+      "types": "./dist/cjs-slim/index-slim.d.ts",
+      "node": "./dist/node/index.cjs",
+      "import": "./dist/es-slim/index-slim.js",
+      "default": "./dist/cjs-slim/index-slim.cjs"
+    },
     "./type-system.wasm": "./dist/wasm/type-system.wasm",
     "./package.json": "./package.json"
   },
