--- a/crates/type-system/Cargo.toml
+++ b/crates/type-system/Cargo.toml
@@ -30,8 +30,8 @@ console_error_panic_hook = { version = "0.1.6" }
 wasm-bindgen-test = "0.3.13"
 
 [profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+lto = true
+opt-level = 's'
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = ['-Os']
+wasm-opt = false
