Unify Type System packages (#808)
* Add new unified type-system package

* Migrate type-system tests

* Remove old packages

--- a/crates/type-system/Cargo.toml
+++ b/crates/type-system/Cargo.toml
@@ -19,7 +19,7 @@ tsify = "0.4.2"
 url = "2.2.2"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
+wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
@@ -30,5 +30,8 @@ console_error_panic_hook = { version = "0.1.6" }
 wasm-bindgen-test = "0.3.13"
 
 [profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+lto = true
+opt-level = 's'
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
