--- a/crates/type-system/Makefile.toml
+++ b/crates/type-system/Makefile.toml
@@ -41,7 +41,6 @@ run_task = { name = ["build", "lint", "test"] }
 [tasks.cargo]
 private = true
 command = "cargo"
-dependencies = ["install-cargo-hack"]
 
 [tasks.yarn]
 private = true
@@ -71,7 +70,7 @@ args = ["build", "--profile", "${CARGO_MAKE_CARGO_PROFILE}", "@@split(CARGO_BUIL
 extend = "node"
 cwd = "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}"
 args = ["--loader", "ts-node/esm", "./scripts/build-wasm.ts"]
-dependencies = ["install-wasm-pack"]
+dependencies = ["install-wasm-pack", "install-wasm-opt"]
 
 ################################################################################
 ## Lints                                                                      ##
@@ -170,10 +169,6 @@ install_crate = { rustup_component_name = "clippy" }
 private = true
 install_crate = { rustup_component_name = "rustfmt" }
 
-[tasks.install-cargo-hack]
-private = true
-install_crate = { crate_name = "cargo-hack", version = "0.5.15", binary = "cargo", test_arg = ["hack", "--version"] }
-
 [tasks.install-cargo-nextest]
 private = true
 install_crate = { crate_name = "cargo-nextest", version = "0.9.28", binary = "cargo", test_arg = ["nextest", "--version"] }
@@ -181,3 +176,7 @@ install_crate = { crate_name = "cargo-nextest", version = "0.9.28", binary = "ca
 [tasks.install-wasm-pack]
 private = true
 install_crate = { crate_name = "wasm-pack", version = "0.10.3", binary = "wasm-pack", test_arg = ["--version"] }
+
+[tasks.install-wasm-opt]
+private = true
+install_crate = { crate_name = "wasm-opt", version = "0.110.2", binary = "wasm-opt", test_arg = ["--version"] }
