--- a/packages/@blockprotocol/type-system/package.json
+++ b/packages/@blockprotocol/type-system/package.json
@@ -59,6 +59,7 @@
     "@types/node": "18.11.10",
     "eslint": "8.28.0",
     "jest": "29.3.1",
+    "rimraf": "^3.0.2",
     "rollup": "3.5.1",
     "ts-jest": "29.0.3",
     "tslib": "2.4.1",
