--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -295,7 +295,7 @@ jobs:
 
       - name: Generate coverage report
         if: ${{ success() || failure() }}
-        run: yarn node node_modules/.bin/nyc report --reporter=lcovonly --reporter=text
+        run: yarn exec "nyc report --reporter=lcovonly --reporter=text"
 
       - uses: codecov/codecov-action@v3
         if: ${{ success() || failure() }}
