--- a/packages/@blockprotocol/graph/package.json
+++ b/packages/@blockprotocol/graph/package.json
@@ -52,7 +52,7 @@
     "build": "yarn clean && tsc --skipLibCheck",
     "clean": "rimraf ./dist/",
     "fix:eslint": "eslint --fix .",
-    "lint:eslint": "eslint .",
+    "lint:eslint": "eslint --report-unused-disable-directives .",
     "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
