--- a/packages/block-scripts/package.json
+++ b/packages/block-scripts/package.json
@@ -21,7 +21,7 @@
   "bin": "./bin.js",
   "scripts": {
     "fix:eslint": "eslint --fix .",
-    "lint:eslint": "eslint .",
+    "lint:eslint": "eslint --report-unused-disable-directives .",
     "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
