--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -14,7 +14,7 @@
     "exe": "node --unhandled-rejections=strict --experimental-loader ts-node/esm/transpile-only --es-module-specifier-resolution=node --require=@local/script-resources/suppress-experimental-warnings.cjs --require dotenv-flow/config",
     "fix:eslint": "eslint --fix .",
     "generate-blockmetadata-schema": "typescript-json-schema ../../packages/@blockprotocol/core/dist/esm/types.d.ts BlockMetadata --required true --out public/schemas/block-metadata.json",
-    "lint:eslint": "eslint .",
+    "lint:eslint": "eslint --report-unused-disable-directives .",
     "lint:tsc": "tsc --noEmit",
     "start": "yarn exe scripts/start.ts"
   },
