--- a/crates/type-system/package.json
+++ b/crates/type-system/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "fix:eslint": "eslint --fix .",
-    "lint:eslint": "eslint .",
+    "lint:eslint": "eslint --report-unused-disable-directives .",
     "lint:tsc": "tsc --noEmit"
   },
   "devDependencies": {
