--- a/packages/@local/eslint-config/package.json
+++ b/packages/@local/eslint-config/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "fix:eslint": "eslint --fix .",
-    "lint:eslint": "eslint .",
+    "lint:eslint": "eslint --report-unused-disable-directives .",
     "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
