--- a/packages/block-template-html/package.json
+++ b/packages/block-template-html/package.json
@@ -22,7 +22,7 @@
     "dev": "echo \"Serving at http://localhost:63212\" && http-server -p 63212 ./dev",
     "fix:eslint": "eslint --fix .",
     "format": "prettier --write --ignore-unknown .",
-    "lint:eslint": "eslint .",
+    "lint:eslint": "eslint --report-unused-disable-directives .",
     "prepare": "rimraf ./dev/src && lnk -f ./src ./dev",
     "prepublishOnly": "PACKAGE_DIR=$(pwd) yarn workspace @local/package-chores exe scripts/cleanup-before-publishing.ts",
     "serve": "block-scripts serve"
