--- a/packages/@blockprotocol/type-system/package.json
+++ b/packages/@blockprotocol/type-system/package.json
@@ -34,6 +34,13 @@
   "main": "./dist/umd/index.js",
   "module": "./dist/es/index.js",
   "types": "./dist/umd/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "slim": [
+        "./dist/cjs-slim/index-slim.d.ts"
+      ]
+    }
+  },
   "files": [
     "dist"
   ],
