--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -11,7 +11,7 @@
     "dev": "yarn exe scripts/dev.ts",
     "dev:db": "docker-compose -f docker-compose.dev.yml --env-file .env.local up",
     "dev:seed-db": "yarn exe scripts/seed-db.ts",
-    "exe": "node --unhandled-rejections=strict --experimental-loader ts-node/esm/transpile-only --es-module-specifier-resolution=node --require=@local/script-resources/suppress-experimental-warnings.cjs --require dotenv-flow/config",
+    "exe": "node --unhandled-rejections=strict --experimental-loader ts-node/esm/transpile-only --es-module-specifier-resolution=node --require=suppress-experimental-warnings --require dotenv-flow/config",
     "fix:eslint": "eslint --fix .",
     "generate-blockmetadata-schema": "typescript-json-schema ../../packages/@blockprotocol/core/dist/esm/types.d.ts BlockMetadata --required true --out public/schemas/block-metadata.json",
     "lint:eslint": "eslint --report-unused-disable-directives .",
@@ -145,6 +145,7 @@
     "playwright": "^1.27.1",
     "playwright-test-coverage": "^1.2.5",
     "rimraf": "^3.0.2",
+    "suppress-experimental-warnings": "^1.1.2",
     "ts-node": "10.9.1",
     "typescript": "4.9.3"
   }
