--- a/packages/@local/package-chores/package.json
+++ b/packages/@local/package-chores/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "exe": "node --unhandled-rejections=strict --experimental-loader ts-node/esm/transpile-only --es-module-specifier-resolution=node --require=@local/script-resources/suppress-experimental-warnings.cjs --require dotenv-flow/config",
+    "exe": "node --unhandled-rejections=strict --experimental-loader ts-node/esm/transpile-only --es-module-specifier-resolution=node --require=suppress-experimental-warnings --require dotenv-flow/config",
     "fix:eslint": "eslint --fix .",
     "lint:eslint": "eslint --report-unused-disable-directives .",
     "lint:tsc": "tsc --noEmit"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
-    "@local/script-resources": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
     "@types/fs-extra": "^9.0.13",
     "@types/wait-on": "5.3.1",
@@ -23,6 +22,7 @@
     "fs-extra": "^10.1.0",
     "prettier": "2.8.0",
     "sleep-promise": "9.1.0",
+    "suppress-experimental-warnings": "^1.1.2",
     "tmp-promise": "3.0.3",
     "tree-kill": "1.2.2",
     "ts-node": "10.9.1",
