Deduplicate edges in `mockDataToSubgraph`

--- a/packages/mock-block-dock/package.json
+++ b/packages/mock-block-dock/package.json
@@ -40,12 +40,14 @@
     "@blockprotocol/core": "0.0.12",
     "@blockprotocol/graph": "0.0.18",
     "@blockprotocol/hook": "0.0.8",
+    "@blockprotocol/type-system": "0.0.2",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@lit-labs/react": "^1.0.4",
     "@mui/material": "^5.10.4",
     "ajv": "^8.9.0",
     "echarts": "^5.3.3",
+    "lodash": "4.17.21",
     "react-json-view": "^1.21.3",
     "react-resizable": "^3.0.4",
     "slate": "^0.82.1",
