utility in @blockprotocol/graph to generate types for a subgraph, given a URI to a json schema

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,9 @@ packages/mock-block-dock/src/version.ts
 packages/@blockprotocol/type-system/.rollup.cache
 packages/@blockprotocol/type-system/wasm
 
+## Auto-generated files
+*.gen.ts
+
 ##################
 ## Specific to git
 ##################
