--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -80,3 +80,6 @@ packages/block-template-html/dev/src
 packages/mock-block-dock/src/version.ts
 packages/@blockprotocol/type-system/.rollup.cache
 packages/@blockprotocol/type-system/wasm
+
+## Auto-generated files
+*.gen.ts
