--- a/packages/@blockprotocol/graph/package.json
+++ b/packages/@blockprotocol/graph/package.json
@@ -63,13 +63,18 @@
   "scripts": {
     "build": "yarn clean && tsc --skipLibCheck",
     "clean": "rimraf ./dist/",
+    "codegen": "json2ts src/type-resolver/entity-type-meta-schema.json --output src/type-resolver/entity-type-meta-schema.gen.ts",
     "fix:eslint": "eslint --fix .",
+    "postinstall": "yarn codegen",
     "lint:eslint": "eslint --report-unused-disable-directives .",
     "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
     "@blockprotocol/core": "0.0.12",
     "@blockprotocol/type-system": "0.0.2",
+    "ajv": "^8.11.2",
+    "ajv-formats": "^2.1.1",
+    "json-schema-to-typescript": "^11.0.2",
     "lit": "^2.4.1"
   },
   "devDependencies": {
